Fix #6616 - Exact match alignment (#6625)

--- a/src/sass/components/search/searchForm.scss
+++ b/src/sass/components/search/searchForm.scss
@@ -143,8 +143,6 @@
 }
 
 .searchForm-advanced-wildcard-container {
-    display: flex;
-    justify-content: flex-end;
     cursor: pointer;
 }
 
